<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mustwakeup.galaxyvs.com.mustwakeup.Activities.AlaramSetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_alarmname"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/img_save"
            android:src="@drawable/tick" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/alarmset_btncancel"
            android:layout_weight="0.5"
            style="@style/buttons" />

        <Button
            style="@style/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/alarmset_btnsave"
            android:layout_weight="0.5" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/alarmset_txtdate"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:layout_marginTop="5dp"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alarmTime"
            android:textStyle="bold"
            android:textSize="80sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:layout_below="@+id/alarmset_txtdate"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/weeklayout"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/alarmTime"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:id="@+id/viewStub"
        android:background="@android:color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnsoundpick"
        android:background="@color/lite_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pick_sound"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tone"
            android:id="@+id/txtRingName"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutActivityPick"
        android:background="@color/lite_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_activity"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tone"
            android:id="@+id/txtActivityName"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/white" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:background="@color/lite_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/alarm_name"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAlaramName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textColor="@android:color/white"
            android:hint="@string/alarm_name_hint"
            android:gravity="center_horizontal"
            android:textColorHint="#ffddffdf" />


    </LinearLayout>


</LinearLayout>
